update to run tests from cli with env params